Fix mobile nav sign out button alignment (#376)

--- a/assets/css/partials/_navbar.scss
+++ b/assets/css/partials/_navbar.scss
@@ -30,6 +30,13 @@
 
   .signout-form {
     padding: 0;
+    border: none;
+    box-shadow: none;
+    margin-left: 30px;
+
+    @media (min-width: 768px) {
+      margin-left: 0;
+    }
   }
 
   .spacer {
